cambios Acerca y contacto
se cambiaron siertas lineas en el codigo de ambas secciones

--- a/Acerca.html
+++ b/Acerca.html
@@ -71,7 +71,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" ><title>Placeholder</title><rect width="100%" height="100%" /></svg>
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" ><title>Placeholder</title></svg>
                 <div class="card-body">
                   <p class="card-text">hola me gusta las papas fritras.</p>
                   <div class="d-flex justify-content-between align-items-center">
