correccion de errores
se corriguieron varias lineas de codigo de todas las clases y se pudo agregar el apartado de la imagen en la clase contacto

--- a/contactos.html
+++ b/contactos.html
@@ -56,27 +56,27 @@
       <h2 class="fw-normal">Mis redes sociales.</h2>
       <br><br>
       </center>
-      <!-- Three columns of text below the carousel -->
+    
       <div class="row">
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+          <img src="LogoF.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Facebook</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <p>Me puedes ocntactar a traves de mi pagina oficial de facebook.</p>
           <p><a class="btn btn-secondary" href="https://www.facebook.com/?locale=es_LA"> Enviar mensaje... &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div><!--primera imagen -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+          <img src="LogoT.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Twitter</h2>
-          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+          <p>Me puedes ocntactar a traves de mi pagina oficial de twitter.</p>
           <p><a class="btn btn-secondary" href="https://twitter.com/i/flow/login?redirect_after_login=%2Finiciarsesion"> Enviar mensaje... &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div><!-- segunda imagen -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+          <img src="LogoI.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Instagram</h2>
-          <p>And lastly this, the third column of representative placeholder content.</p>
+          <p>Me puedes ocntactar a traves de mi pagina oficial de Instagram.</p>
           <p><a class="btn btn-secondary" href="https://www.instagram.com/"> Enviar mensaje... &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
+        </div><!-- tercera imagen -->
+      </div>
     </div>
 
     <hr class="featurette-divider">
