--- a/contactos.html
+++ b/contactos.html
@@ -53,7 +53,7 @@
     <div class="navbar navbar-dark bg-dark shadow-sm">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center"> 
-          <strong>Vista Previa</strong>
+          <strong>Contacto</strong>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -149,25 +149,45 @@
           <img src="LogoF.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Facebook</h2>
           <p>Me puedes ocntactar a traves de mi pagina oficial de facebook.</p>
-          <p><a class="btn btn-secondary" href="https://www.facebook.com/?locale=es_LA"> Enviar mensaje... &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="https://www.facebook.com/?locale=es_LA"> Enviar mensaje... 
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+              <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+              <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+            </svg>
+          </a></p>
         </div><!--primera imagen -->
         <div class="col-lg-4">
           <img src="LogoT.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Twitter</h2>
           <p>Me puedes ocntactar a traves de mi pagina oficial de twitter.</p>
-          <p><a class="btn btn-secondary" href="https://twitter.com/i/flow/login?redirect_after_login=%2Finiciarsesion"> Enviar mensaje... &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="https://twitter.com/i/flow/login?redirect_after_login=%2Finiciarsesion"> Enviar mensaje... 
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+              <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+              <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+            </svg>
+          </a></p>
         </div><!-- segunda imagen -->
         <div class="col-lg-4">
           <img src="LogoI.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Instagram</h2>
-          <p>Me puedes ocntactar a traves de mi pagina oficial de Instagram.</p>
-          <p><a class="btn btn-secondary" href="https://www.instagram.com/"> Enviar mensaje... &raquo;</a></p>
+          <p>Me puedes contactar a traves de mi pagina oficial de Instagram.</p>
+          <p><a class="btn btn-secondary" href="https://www.instagram.com/"> Enviar mensaje... 
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+              <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+              <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+            </svg>
+          </a></p>
         </div><!-- tercera imagen -->
       </div>
     </div>
     <br>
     <div class="d-grid gap-2 col-6 mx-auto">
-      <a class="btn btn-secondary" href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlRZPNhZJXnvVdlwLrPQBBZfzdxJSzHpmQNpxdfdTQZszhSZTNvvZBNcxMzlnnqBDVkXTQ" role="button">Mandame un mensaje a mi correo </a>
+      <a class="btn btn-secondary" href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlRZPNhZJXnvVdlwLrPQBBZfzdxJSzHpmQNpxdfdTQZszhSZTNvvZBNcxMzlnnqBDVkXTQ" role="button">Mandame un mensaje a mi correo  
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+          <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+          <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+        </svg>
+      </a>
     </div>
 
     <hr class="featurette-divider">
