--- a/Acerca.html
+++ b/Acerca.html
@@ -146,29 +146,29 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active"><center>
-              <img src="imagen 2.jpeg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
+              <img src="diseño.jpg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>FOTO 1 TITULO.</h1>
-                  <p class="opacity-75">CAMBIAR EL TEXTO DE LA IMAGEN.</p>
+                  <h1>Diseño de js</h1>
+                  <p>Aqui se creo el codigo para agregar el cambio de color a la pagina.</p>
                 </div>
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="imagen 2.jpeg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="diseño2.jpg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>FOTO 2 TITULO.</h1>
-                  <p class="opacity-75">CAMBIAR EL TEXTO DE LA IMAGEN.</p>
+                  <h1>Diseño de contactos.</h1>
+                  <p>En este apartado se creo todo el codigo de la pagina de contacto.</p>
                 </div>
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="imagen 2.jpeg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="diseño3.jpg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>FOTO 3 TITULO.</h1>
-                  <p class="opacity-75">CAMBIAR EL TEXTO DE LA IMAGEN.</p>
+                  <h1>Pagina principal.</h1>
+                  <p class="opacity-75">Aqui fue la creacion de la pagina principal, fue el diseño base de las otras paginas.</p>
                 </div>
               </div>
             </div>
@@ -183,6 +183,8 @@
           </button>
         </div>
       </div>
+
+      <hr class="featurette-divider"> <!--estas es la linea de divicion del carrusel y la informacion en tarjetas -->
 
     <br><br><br><br>
       <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -215,7 +217,7 @@
         </div>
       </div>
     </main>
-    <br><br><br> <br><br><br> <br><br><br>
+    <br><br><br><br><br><br><br><br><br>
       
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
  </body>
