--- a/contactos.html
+++ b/contactos.html
@@ -148,7 +148,7 @@
           <img src="LogoF.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Facebook</h2>
           <p>Me puedes ocntactar a traves de mi pagina oficial de facebook.</p>
-          <p><a class="btn btn-secondary" href="https://www.facebook.com/profile.php?id=100009779890995"> Enviar mensaje... 
+          <p><a class="btn btn-primary" href="https://www.facebook.com/profile.php?id=100009779890995"> Enviar mensaje... 
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
               <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
@@ -159,7 +159,7 @@
           <img src="LogoT.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Twitter</h2>
           <p>Me puedes ocntactar a traves de mi pagina oficial de twitter.</p>
-          <p><a class="btn btn-secondary" href="https://twitter.com/DeadzBlack"> Enviar mensaje... 
+          <p><a class="btn btn-primary" href="https://twitter.com/DeadzBlack"> Enviar mensaje... 
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
               <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
@@ -170,7 +170,7 @@
           <img src="LogoI.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Instagram</h2>
           <p>Me puedes contactar a traves de mi pagina oficial de Instagram.</p>
-          <p><a class="btn btn-secondary" href="https://www.instagram.com/black_dead_z/?hl=es"> Enviar mensaje... 
+          <p><a class="btn btn-primary" href="https://www.instagram.com/black_dead_z/?hl=es"> Enviar mensaje... 
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
               <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
@@ -181,7 +181,7 @@
     </div>
     <br>
     <div class="d-grid gap-2 col-6 mx-auto">
-      <a class="btn btn-secondary" href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlRZPNhZJXnvVdlwLrPQBBZfzdxJSzHpmQNpxdfdTQZszhSZTNvvZBNcxMzlnnqBDVkXTQ" role="button">Mandame un mensaje a mi correo  
+      <a class="btn btn-primary" href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlRZPNhZJXnvVdlwLrPQBBZfzdxJSzHpmQNpxdfdTQZszhSZTNvvZBNcxMzlnnqBDVkXTQ" role="button">Mandame un mensaje a mi correo  
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
           <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
         </svg>
@@ -217,7 +217,9 @@
 </div>
     <hr class="featurette-divider">
 
-
+    <footer class="bg-white container-fluid text-start mt-2 mb-2">
+      &copy; Axl Fuentes 
+    </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
  </body>
