--- a/Acerca.html
+++ b/Acerca.html
@@ -146,16 +146,16 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active"><center>
-              <img src="diseño.jpg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
+              <img src="diseño.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
-                <div class="carousel-caption">
+                <div class="carousel-caption text-end">
                   <h1>Diseño de js</h1>
                   <p>Aqui se creo el codigo para agregar el cambio de color a la pagina.</p>
                 </div>
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="diseño2.jpg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="diseño2.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Diseño de contactos.</h1>
@@ -164,7 +164,7 @@
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="diseño3.jpg" class="bd-placeholder-img" width="65%" height="73%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="diseño3.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Pagina principal.</h1>
@@ -218,6 +218,10 @@
       </div>
     </main>
     <br><br><br><br><br><br><br><br><br>
+
+    <footer class="bg-white container-fluid text-start mt-2 mb-2">
+      &copy; Axl Fuentes 
+    </footer>
       
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
  </body>
