--- a/curriculum.html
+++ b/curriculum.html
@@ -145,6 +145,10 @@
       </div>
     </div>
 
+    <footer class="bg-white container-fluid text-start mt-2 mb-2">
+      &copy; Axl Fuentes 
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
