--- a/contactos.html
+++ b/contactos.html
@@ -217,7 +217,7 @@
 </div>
     <hr class="featurette-divider">
 
-    <footer class="bg-white container-fluid text-start mt-2 mb-2">
+    <footer class="bg-auto container-fluid text-start mt-2 mb-2">
       &copy; Axl Fuentes 
     </footer>
   
