--- a/curriculum.html
+++ b/curriculum.html
@@ -144,8 +144,8 @@
         </center>
       </div>
     </div>
-
-    <footer class="bg-white container-fluid text-start mt-2 mb-2">
+    
+    <footer class="bg-auto container-fluid text-start mt-2 mb-2">
       &copy; Axl Fuentes 
     </footer>
 
