Cambio de carpeta
Se creo una carpeta nueva para las imagenes y de igual manera se tuvo que cambiar los codigos de todas las clases

--- a/contactos.html
+++ b/contactos.html
@@ -42,7 +42,7 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4>Saber mas...</h4>
             <ul class="list-unstyled">
-              <li><a href="curriculum.html" class="text-white">Curriculum</a></li>
+              <li><a href="index.html" class="text-white">Curriculum</a></li>
               <li><a href="Acerca.html" class="text-white">Acerca de mi</a></li>
             </ul>
           </div>
@@ -145,7 +145,7 @@
     
       <div class="row">
         <div class="col-lg-4">
-          <img src="LogoF.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+          <img src="../curriculum/imagenes/LogoF.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Facebook</h2>
           <p>Me puedes ocntactar a traves de mi pagina oficial de facebook.</p>
           <p><a class="btn btn-primary" href="https://www.facebook.com/profile.php?id=100009779890995"> Enviar mensaje... 
@@ -156,7 +156,7 @@
           </a></p>
         </div><!--primera imagen -->
         <div class="col-lg-4">
-          <img src="LogoT.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+          <img src="../curriculum/imagenes/LogoT.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Twitter</h2>
           <p>Me puedes ocntactar a traves de mi pagina oficial de twitter.</p>
           <p><a class="btn btn-primary" href="https://twitter.com/DeadzBlack"> Enviar mensaje... 
@@ -167,7 +167,7 @@
           </a></p>
         </div><!-- segunda imagen -->
         <div class="col-lg-4">
-          <img src="LogoI.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+          <img src="../curriculum/imagenes/LogoI.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Instagram</h2>
           <p>Me puedes contactar a traves de mi pagina oficial de Instagram.</p>
           <p><a class="btn btn-primary" href="https://www.instagram.com/black_dead_z/?hl=es"> Enviar mensaje... 
@@ -206,7 +206,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <img src="telegram.jpg" class="img-thumbnail" alt="...">
+        <img src="../curriculum/imagenes/telegram.jpg" class="img-thumbnail" alt="...">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-warning" data-bs-dismiss="modal">Cerrar</button>
