--- a/index.html
+++ b/index.html
@@ -131,16 +131,11 @@
       <div class="col">
         <center>
           <!-- <div class="d-flex - align-items-center"></div> -->
-        <img src="photo.jpg" border=10 height=200 width=200>
-        
+        <img src="../curriculum/imagenes/photo.jpg" border=10 height=200 width=200>
         <div class="b-example-divider"></div>
-
         <h1 class="display-4 fst-italic">Axl Cobain Fuentes Parra</h1>
-        
         <div class="b-example-divider"></div>
-
             <p> Tengo 21 años, vivo en el Estado de Mexico, dispuesto a trabajar.</p>
-
         </center>
       </div>
     </div>
