--- a/Acerca.html
+++ b/Acerca.html
@@ -43,7 +43,7 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4>Saber mas...</h4>
             <ul class="list-unstyled">
-              <li><a href="curriculum.html" class="text-white">Curriculum</a></li>
+              <li><a href="index.html" class="text-white">Curriculum</a></li>
               <li><a href="contactos.html" class="text-white">Contacto</a></li>
             </ul>
           </div>
@@ -143,63 +143,65 @@
                      <!-- seccion habilidades -->
                      <section id="habilidades" class="habilidades">
                       <div class="contenido-seccion">
-                          <h2>Habiilidades</h2>
+                          <h2>Habiilidades</h2><br><br>
+                          <h3>Esto es un poco de las habilidades que mas domino y que creo serian utiles, tengo mas dominado lo que seria el conocimiento de el leguaje HTML en la programacion,
+                          de igual manera tengo dominado lo que seria la conduccion de vehiculos </h3>
                          
                         </div>
                         <br><br>
                         <div class="progress">
-                          <span class="skill">Marcketing <i class="val">90%</i></span>
+                          <span class="skill">Conduccion de vehiculos<i class="val"> 100%</i></span>
+                          <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                          </div>
+                        </div>
+                        <br><br>  
+                        <div class="progress">
+                          <span class="skill">HTML<i class="val"> 90%</i></span>
                           <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
                           </div>
                         </div>
                         <br><br>
                         <div class="progress">
-                          <span class="skill">Word <i class="val">90%</i></span>
+                          <span class="skill">JavaScript<i class="val"> 85%</i></span>
                           <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
                           </div>
                         </div>
                         <br><br>
                         <div class="progress">
-                          <span class="skill">PowerPoint<i class="val">90%</i></span>
+                          <span class="skill">CSS<i class="val"> 80%</i></span>
                           <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                           </div>
                         </div>
                         <br><br>
                         <div class="progress">
-                          <span class="skill">Publicidad<i class="val">90%</i></span>
+                          <span class="skill">Papeleria de office<i class="val"> 90%</i></span>
                           <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
                           </div>
                         </div>
                         <br><br>
                         <div class="progress">
-                          <span class="skill">Photoshop <i class="val">80%</i></span>
+                          <span class="skill">Diseño grafico<i class="val"> 50%</i></span>
                           <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
                           </div>
                         </div>
-                        <br><br>
-                        <div class="progress">
-                          <span class="skill">JavaScript <i class="val">60%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                          </div>
-                        </div>
-                        <br><br>                 
+                        <br><br>               
                             <div class="progress">
-                              <span class="skill"> html <i class="val">60%</i></span>
+                              <span class="skill">Robotica<i class="val"> 45%</i></span>
                               <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;"></div>
                               </div>
                             </div>
                         <br><br>
                             <div class="progress">
-                              <span class="skill">CSS <i class="val">60%</i></span>
+                              <span class="skill">Edicion multimedia<i class="val"> 40%</i></span>
                               <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
                                 <br><br><br>
                               </div>
                             </div>
@@ -218,7 +220,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="program.jpg" class="card-img-top" alt="...">
+            <img src="../curriculum/imagenes/program.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pasatiempos.</h5>
               <p class="card-text">Me gusta mucho la programacion de videojuegos y creacion de paginas web, en mis tiempos libres me gusta jugar videojuegos e informarme sobre lo nuevo de la tecnologia, me gusta todo tipo de musica y salir con la familia.</p>
@@ -227,7 +229,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="estudio.jpg" class="card-img-top" alt="...">
+            <img src="../curriculum/imagenes/estudio.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Estudios.</h5>
               <p class="card-text">Tengo los estudios basicos terminados, en nivel mediasuperior tengo una carrera tecnologica y soy tecnico en programacion, tengo un certificado en administracion de bases de datos relacionales.</p>
@@ -236,7 +238,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="paquete.jpg" class="card-img-top" alt="...">
+            <img src="../curriculum/imagenes/paquete.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Trabajos.</h5>
               <p class="card-text">Tengo trabajando desde que tengo 12 años, tengo un negocio propio de venta de multiples productos, trabaje en una empresa de paqueteria durante 4 meses.</p>
@@ -255,7 +257,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active"><center>
-              <img src="diseño.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
+              <img src="../curriculum/imagenes/diseño.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption text-end">
                   <h1>Diseño de js</h1>
@@ -264,7 +266,7 @@
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="diseño2.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="../curriculum/imagenes/diseño2.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Diseño de contactos.</h1>
@@ -273,7 +275,7 @@
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="diseño3.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="../curriculum/imagenes/diseño3.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Pagina principal.</h1>
