--- a/Acerca.html
+++ b/Acerca.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head><script src="../curriculum/index.js"></script>
+  <head><script src="./index.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> CURRICULUM_DE_AXL </title>
@@ -34,32 +34,32 @@
   </head>
 
   <header data-bs-theme="dark">
-    <div class="collapse text-bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4>Presentación</h4>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4>Saber mas...</h4>
-            <ul class="list-unstyled">
-              <li><a href="index.html" class="text-white">Curriculum</a></li>
-              <li><a href="contactos.html" class="text-white">Contacto</a></li>
-            </ul>
-          </div>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <a class="navbar-brand"> Acerca de mi</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"> Curriculum <span class="sr-only">(principal)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactos.html">Contacto</a>
+          </li>
+          <!--<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown link
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>-->
+        </ul>
       </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center"> 
-          <strong>Acerca de mi</strong>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </div>
+    </nav>
   </header>
 
   <body>
@@ -140,79 +140,66 @@
       <hr class="featurette-divider"> <!--estas es la linea de divicion del carrusel y la informacion en tarjetas -->
       <main>
         <div class="container">
-                     <!-- seccion habilidades -->
-                     <section id="habilidades" class="habilidades">
-                      <div class="contenido-seccion">
-                          <h2>Habiilidades</h2><br><br>
-                          <h3>Esto es un poco de las habilidades que mas domino y que creo serian utiles, tengo mas dominado lo que seria el conocimiento de el leguaje HTML en la programacion,
-                          de igual manera tengo dominado lo que seria la conduccion de vehiculos </h3>
-                         
-                        </div>
-                        <br><br>
-                        <div class="progress">
-                          <span class="skill">Conduccion de vehiculos<i class="val"> 100%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-                          </div>
-                        </div>
-                        <br><br>  
-                        <div class="progress">
-                          <span class="skill">HTML<i class="val"> 90%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-                          </div>
-                        </div>
-                        <br><br>
-                        <div class="progress">
-                          <span class="skill">JavaScript<i class="val"> 85%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
-                          </div>
-                        </div>
-                        <br><br>
-                        <div class="progress">
-                          <span class="skill">CSS<i class="val"> 80%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-                          </div>
-                        </div>
-                        <br><br>
-                        <div class="progress">
-                          <span class="skill">Papeleria de office<i class="val"> 90%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-                          </div>
-                        </div>
-                        <br><br>
-                        <div class="progress">
-                          <span class="skill">Diseño grafico<i class="val"> 50%</i></span>
-                          <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
-                          </div>
-                        </div>
-                        <br><br>               
-                            <div class="progress">
-                              <span class="skill">Robotica<i class="val"> 45%</i></span>
-                              <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;"></div>
-                              </div>
-                            </div>
-                        <br><br>
-                            <div class="progress">
-                              <span class="skill">Edicion multimedia<i class="val"> 40%</i></span>
-                              <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                <br><br><br>
-                              </div>
-                            </div>
-                            <br><br>
-                           </div>
-                          </div>
-                        </div> 
-                      </div>
-                  </main>
-                </section>
-              <br><br>
+           <!-- seccion habilidades -->
+          <section id="habilidades" class="habilidades">
+            <div class="contenido-seccion">
+              <h2>Habiilidades</h2><br><br>
+              <h3>Esto es un poco de las habilidades que mas domino y que creo serian utiles, tengo mas dominado lo que seria el conocimiento de el leguaje HTML en la programacion,
+                de igual manera tengo dominado lo que seria la conduccion de vehiculos </h3>
+            </div>
+
+            <br><br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+               Conduccion de vehiculos  100%
+              </div>
+            </div>
+            <br><br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                Papeleria de Office  90%
+              </div>
+            </div>
+            <br><br> 
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                HTML  90%
+              </div>
+            </div>
+            <br><br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                JavaScript  85%
+              </div>
+            </div>
+            <br><br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                CSS  75%
+              </div>
+            </div>
+            <br><br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+               Diseño grafico  50%
+              </div>
+            </div>
+            <br><br>               
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width:45%">
+                Robotica  45%
+              </div>
+            </div>
+            <br><br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                Edicion multimedia  50%
+              </div>
+            </div>
+            <br><br><br>
+          </section>
+      </main>
+    <br><br>
 
       <hr class="featurette-divider"> <!--estas es la linea de divicion del carrusel y la informacion en tarjetas -->
 
@@ -220,7 +207,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="../curriculum/imagenes/program.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/program.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pasatiempos.</h5>
               <p class="card-text">Me gusta mucho la programacion de videojuegos y creacion de paginas web, en mis tiempos libres me gusta jugar videojuegos e informarme sobre lo nuevo de la tecnologia, me gusta todo tipo de musica y salir con la familia.</p>
@@ -229,7 +216,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../curriculum/imagenes/estudio.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/estudio.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Estudios.</h5>
               <p class="card-text">Tengo los estudios basicos terminados, en nivel mediasuperior tengo una carrera tecnologica y soy tecnico en programacion, tengo un certificado en administracion de bases de datos relacionales.</p>
@@ -238,7 +225,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../curriculum/imagenes/paquete.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/paquete.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Trabajos.</h5>
               <p class="card-text">Tengo trabajando desde que tengo 12 años, tengo un negocio propio de venta de multiples productos, trabaje en una empresa de paqueteria durante 4 meses.</p>
@@ -257,7 +244,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active"><center>
-              <img src="../curriculum/imagenes/diseño.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
+              <img src="imagenes/diseño.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption text-end">
                   <h1>Diseño de js</h1>
@@ -266,7 +253,7 @@
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="../curriculum/imagenes/diseño2.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="imagenes/diseño2.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Diseño de contactos.</h1>
@@ -275,7 +262,7 @@
               </div>
             </div>
             <div class="carousel-item"><center>
-              <img src="../curriculum/imagenes/diseño3.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
+              <img src="imagenes/diseño3.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Pagina principal.</h1>
