--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
-  <head><script src="../curriculum/index.js"></script>
+  <head><script src="./index.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> CURRICULUM_DE_AXL </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  
+    <link href="styleP.css" rel="stylesheet">
+
     <style>
       .bi {
         vertical-align: -.125em;
@@ -33,32 +34,32 @@
   </head>
   
   <header data-bs-theme="dark">
-    <div class="collapse text-bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4>Vista Previa</h4>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4>Saber mas...</h4>
-            <ul class="list-unstyled">
-              <li><a href="contactos.html" class="text-white">Contacto</a></li>
-              <li><a href="Acerca.html" class="text-white">Acerca de mi</a></li>
-            </ul>
-          </div>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <a class="navbar-brand"> Principal </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="contactos.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Acerca.html">Acerca de mi</a>
+          </li>
+          <!--<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown link
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>-->
+        </ul>
       </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center"> 
-          <strong>Presentación</strong>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </div>
+    </nav>
   </header>
 
   <body> 
@@ -131,7 +132,7 @@
       <div class="col">
         <center>
           <!-- <div class="d-flex - align-items-center"></div> -->
-        <img src="../curriculum/imagenes/photo.jpg" border=10 height=200 width=200>
+        <img src="imagenes/photo.jpg" border=10 height=200 width=200>
         <div class="b-example-divider"></div>
         <h1 class="display-4 fst-italic">Axl Cobain Fuentes Parra</h1>
         <div class="b-example-divider"></div>
