cambio en la presentacion
se cambio la barra de navegacion, se agregaron otras tres cards a Acerca de, y se cambio el texto de habilidades

--- a/Acerca.html
+++ b/Acerca.html
@@ -30,34 +30,22 @@
         --bs-btn-active-border-color: #5a23c8;
       }
     </style>
-  
   </head>
 
+  <!-- barra de navegacion -->
   <header data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <a class="navbar-brand"> Acerca de mi</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"> Curriculum <span class="sr-only">(principal)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contactos.html">Contacto</a>
-          </li>
-          <!--<li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown link
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>-->
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand">Acerca de mi</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html"> Curriculum <span class="sr-only">(principal)</span></a>
+            <a class="nav-link active" href="contactos.html"> Contacto </a>
+          </div>
+        </div>
       </div>
     </nav>
   </header>
@@ -144,8 +132,9 @@
           <section id="habilidades" class="habilidades">
             <div class="contenido-seccion">
               <h2>Habiilidades</h2><br><br>
-              <h3>Esto es un poco de las habilidades que mas domino y que creo serian utiles, tengo mas dominado lo que seria el conocimiento de el leguaje HTML en la programacion,
-                de igual manera tengo dominado lo que seria la conduccion de vehiculos </h3>
+              <h3> Mis capacidades mejor desarrolladas es el emplear el leguaje HTML y manejar muy bien la paqueteria de office, se conducir perfectamente, 
+                tengo expreriencia de desarrollador de software en diseño, instalacion, pruebas y mantenimiento de sistemas de software. 
+               <br> Dominio de varias plataformas, lenguaje y sistemas integrados. capaciadad de autogestion eficaz en proyectos independientes. Buenas habilidades de colaboracion dentro de un equipo. </h3>
             </div>
 
             <br><br>
@@ -228,7 +217,34 @@
             <img src="imagenes/paquete.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Trabajos.</h5>
-              <p class="card-text">Tengo trabajando desde que tengo 12 años, tengo un negocio propio de venta de multiples productos, trabaje en una empresa de paqueteria durante 4 meses.</p>
+              <p class="card-text">El trabajo no es un problema ya que tengo trabajando desde que tengo 14 años, tengo un negocio propio de venta de multiples productos, trabaje en una empresa de paqueteria durante 2 meses ya que por temas de mis estudios me tuve que salir.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Metas a futuro</h5>
+              <p class="card-text">...</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cambiar</h5>
+              <p class="card-text">...</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cambiar</h5>
+              <p class="card-text">...</p>
             </div>
           </div>
         </div>
