--- a/Acerca.html
+++ b/Acerca.html
@@ -138,51 +138,51 @@
             </div>
 
             <br><br>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-               Conduccion de vehiculos  100%
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 100%">
+                Conduccion de vehiculos  100%
               </div>
             </div>
-            <br><br>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+            <br><br>            
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 90%">
                 Papeleria de Office  90%
               </div>
             </div>
             <br><br> 
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 90%">
                 HTML  90%
               </div>
             </div>
             <br><br>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 85%">
                 JavaScript  85%
               </div>
             </div>
             <br><br>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                CSS  75%
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 65%">
+                CSS  65%
               </div>
             </div>
             <br><br>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 50%">
                Diseño grafico  50%
               </div>
             </div>
-            <br><br>               
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width:45%">
-                Robotica  45%
+            <br><br>
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 45%">
+                Edicion multimedia  45%
               </div>
             </div>
             <br><br>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                Edicion multimedia  50%
+            <div class="progress" role="progressbar" aria-label="Animated Danger striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 40%">
+                Robotica  40%
               </div>
             </div>
             <br><br><br>
@@ -196,25 +196,25 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="imagenes/program.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/program.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Pasatiempos.</h5>
+              <h5 class="card-title">Pasatiempo 1.</h5>
               <p class="card-text">Me gusta mucho la programacion de videojuegos y creacion de paginas web, en mis tiempos libres me gusta jugar videojuegos e informarme sobre lo nuevo de la tecnologia, me gusta todo tipo de musica y salir con la familia.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="imagenes/estudio.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/diseno_grafico.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Estudios.</h5>
-              <p class="card-text">Tengo los estudios basicos terminados, en nivel mediasuperior tengo una carrera tecnologica y soy tecnico en programacion, tengo un certificado en administracion de bases de datos relacionales.</p>
+              <h5 class="card-title">Pasatiempo 2.</h5>
+              <p class="card-text">Otro de mis pasatiempos es el dibujo, en base a eso estoy aprendiendo el diseño grafico y diseño grafico asistido por computadora.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="imagenes/paquete.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/paquete.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
               <h5 class="card-title">Trabajos.</h5>
               <p class="card-text">El trabajo no es un problema ya que tengo trabajando desde que tengo 14 años, tengo un negocio propio de venta de multiples productos, trabaje en una empresa de paqueteria durante 2 meses ya que por temas de mis estudios me tuve que salir.</p>
@@ -223,25 +223,25 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="imagenes/metas.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
               <h5 class="card-title">Metas a futuro</h5>
-              <p class="card-text">...</p>
+              <p class="card-text">Una de mis metas a futuro es tener un trabajo estable, poder comprar una casa, un carro y poder viajar a muchas partes del mundo.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="imagenes/estudio.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Cambiar</h5>
-              <p class="card-text">...</p>
+              <h5 class="card-title">Estudios.</h5>
+              <p class="card-text">Tengo los estudios basicos terminados, en nivel mediasuperior tengo una carrera tecnologica y soy tecnico en programacion, tengo un reconocimiento en administracion de bases de datos relacionales.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top img-fluid" alt="...">
             <div class="card-body">
               <h5 class="card-title">Cambiar</h5>
               <p class="card-text">...</p>
@@ -260,7 +260,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active"><center>
-              <img src="imagenes/diseño.jpg" class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
+              <img src="imagenes/diseño.jpg " class="bd-placeholder-img" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="600" height="600" fill="var(--bs-secondary-color)"/></center>
               <div class="container">
                 <div class="carousel-caption text-end">
                   <h1>Diseño de js</h1>
