--- a/contactos.html
+++ b/contactos.html
@@ -134,10 +134,10 @@
       </center>
     
       <div class="row">
-        <div class="col-lg-4">
-          <img src="imagenes/LogoF.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+        <div class="col-lg-3">
+          <img src="imagenes/LogoF.png" class="bd-placeholder-img rounded-circle img-fluid" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Facebook</h2>
-          <p>Me puedes ocntactar a traves de mi pagina oficial de facebook.</p>
+          <p>Me puedes contactar a traves de mi pagina de facebook.</p>
           <p><a class="btn btn-primary" href="https://www.facebook.com/profile.php?id=100009779890995"> Enviar mensaje... 
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
@@ -145,10 +145,10 @@
             </svg>
           </a></p>
         </div><!--primera imagen -->
-        <div class="col-lg-4">
-          <img src="imagenes/LogoT.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+        <div class="col-lg-3">
+          <img src="imagenes/LogoT.png" class="bd-placeholder-img rounded-circle img-fluid" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Twitter</h2>
-          <p>Me puedes ocntactar a traves de mi pagina oficial de twitter.</p>
+          <p>Me puedes contactar a traves de mi pagina de twitter.</p>
           <p><a class="btn btn-primary" href="https://twitter.com/DeadzBlack"> Enviar mensaje... 
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
@@ -156,10 +156,10 @@
             </svg>
           </a></p>
         </div><!-- segunda imagen -->
-        <div class="col-lg-4">
-          <img src="imagenes/LogoI.png" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+        <div class="col-lg-3">
+          <img src="imagenes/LogoI.png" class="bd-placeholder-img rounded-circle img-fluid" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
           <h2 class="fw-normal">Instagram</h2>
-          <p>Me puedes contactar a traves de mi pagina oficial de Instagram.</p>
+          <p>Me puedes contactar a traves de mi pagina de Instagram.</p>
           <p><a class="btn btn-primary" href="https://www.instagram.com/black_dead_z/?hl=es"> Enviar mensaje... 
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
@@ -167,6 +167,17 @@
             </svg>
           </a></p>
         </div><!-- tercera imagen -->
+        <div class="col-lg-3">
+          <img src="imagenes/LogoG.png" class="bd-placeholder-img rounded-circle img-fluid" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+          <h2 class="fw-normal">GitHub</h2>
+          <p>Si gustas ver mi repositorio en GitHub </p>
+          <p><a class="btn btn-primary" href="https://github.com/BlackDeadZ/curriculum"> Ver codigo base...
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+              <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+              <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+            </svg>
+          </a></p>
+        </div><!-- cuarta imagen -->
       </div>
     </div>
     <br>
